fix noWrap

--- a/client/styles/components/component_kit/cw_text.scss
+++ b/client/styles/components/component_kit/cw_text.scss
@@ -8,7 +8,7 @@
     color: $neutral-100;
   }
 
-  &.no-wrap {
+  &.noWrap {
     display: unset;
     overflow: hidden;
     text-overflow: ellipsis;
